--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Operas Index</title>
-  </head>
+<%- include ('./partials/head.ejs') %>
+
   <body>
-        <h1>Famous Operas App</h1>
-        <ul>
+  <div class="body-overlay">
+    <!-- ============ HEADER ============ -->
+      <%- include ('./partials/header.ejs') %>
+        <!-- ============ MAIN ============ -->
+        <main>
+          <div>
+            <h1>Select:
+            <ul>
               <% for (let i = 0; i < opera.length; i++) { %>
               <li>
                 <a href="/opera/<%= opera[i].id %>">
@@ -15,9 +17,12 @@
               </li>
               <% } %>
             </ul>
+            </h1>
+          </div>
+        </main>
 
-    <nav>
-    <a href="/opera/new">Create a New Opera</a>
-</nav>
+<!-- ============ FOOTER ============ -->
+      <%- include ('./partials/footer.ejs') %>
+  </div>
   </body>
 </html>
