--- a/views/new.ejs
+++ b/views/new.ejs
@@ -9,13 +9,14 @@
           <h1>Create a New Opera</h1><br/>
             <form action="/opera" method="POST">
 
-              <input type="text" placeholder="name"><br/>
-              <input type="text" placeholder="composer"><br/>
-              <input type="text" placeholder="year written"><br/>
-              <input type="text" placeholder="characters"><br/>
-              <input type="text" placeholder="famous performers"><br/>
-              <input type="text" placeholder="arias"><br/>
-              <input type="submit" value="ADD">
+              <input type="text" name="name" placeholder="name"><br/>
+              <input type="text" name="url" placeholder="url"><br/>
+              <input type="text" name="composer" placeholder="composer"><br/>
+              <input type="text" name="year_written" placeholder="year written"><br/>
+              <input type="text" name="characters" placeholder="characters"><br/>
+              <input type="text" name="famous_performers" placeholder="famous performers"><br/>
+              <input type="text" name="arias" placeholder="arias"><br/>
+              <input type="submit" name="" value="ADD"/>
             </form>
           </main>
     <!-- ============ FOOTER ============ -->
