more on sesssions

--- a/views/opera/index.ejs
+++ b/views/opera/index.ejs
@@ -1,9 +1,9 @@
-<%- include ('./partials/head.ejs') %>
+<%- include ('../partials/head.ejs') %>
 
   <body>
   <div class="body-overlay">
     <!-- ============ HEADER ============ -->
-      <%- include ('./partials/header.ejs') %>
+      <%- include ('../partials/header.ejs') %>
         <!-- ============ MAIN ============ -->
         <main>
           <div>
@@ -30,6 +30,6 @@
         </main>
 
 <!-- ============ FOOTER ============ -->
-      <%- include ('./partials/footer.ejs') %>
+      <%- include ('../partials/footer.ejs') %>
   </div>
   </body>
