--- a/views/opera/new.ejs
+++ b/views/opera/new.ejs
@@ -1,9 +1,9 @@
-<%- include ('./partials/head.ejs') %>
+<%- include ('../partials/head.ejs') %>
 
   <body>
     <div class="body-overlay">
       <!-- ============ HEADER ============ -->
-      <%- include ('./partials/header.ejs') %>
+      <%- include ('../partials/header.ejs') %>
       <!-- ============ MAIN ============ -->
       <main class="show-main">
           <h1>Create a New Opera</h1><br/>
@@ -20,7 +20,7 @@
             </form>
           </main>
     <!-- ============ FOOTER ============ -->
-      <%- include ('./partials/footer.ejs') %>
+      <%- include ('../partials/footer.ejs') %>
       </div>
     </body>
   </html>
