--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,8 +7,8 @@
       <!-- ============ MAIN ============ -->
       <main class="show-main">
 
-        <h1>Famous Operas App</h1>
-        
+        <h2>Thank you for using our website!</h2>
+
 
 <div>
   <img src="https://images.unsplash.com/photo-1562329265-95a6d7a83440?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1264&q=80">
