--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -7,14 +7,14 @@
       <!-- ============ MAIN ============ -->
       <main class="show-main">
 
-          <h1>New User page</h1>
+          <h1>Login page</h1>
             <form action="/users" method="POST">
 
               User Name: <input type="text" name="username" /><br/>
 
               Password: <input type="password" name="password" /><br/>
 
-              <input type="submit" name="" value="Create User"/>
+              <input type="submit" name="" value="Login User"/>
             </form>
           </main>
     <!-- ============ FOOTER ============ -->
