sign in route created

--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -8,7 +8,7 @@
       <main class="show-main">
 
           <h1>Login page</h1>
-            <form action="/users" method="POST">
+            <form action="/users/login" method="POST">
 
               User Name: <input type="text" name="username" /><br/>
 
